[gd_scene load_steps=2 format=3 uid="uid://bw7oo1uxu7ya4"]

[ext_resource type="Script" path="res://mrp/laggy_window.gd" id="1_iispl"]

[node name="LaggyWindow" type="Window"]
gui_embed_subwindows = true
initial_position = 4
size = Vector2i(895, 507)
transient = true
min_size = Vector2i(895, 507)
content_scale_mode = 1
script = ExtResource("1_iispl")

[node name="Window" type="Window" parent="."]
wrap_controls = true
transient = true
borderless = true
content_scale_mode = 2
content_scale_aspect = 4

[node name="Editor" type="ColorRect" parent="Window"]
offset_right = 40.0
offset_bottom = 40.0

[node name="WindowFactorWindow" type="Window" parent="."]
position = Vector2i(0, 484)
size = Vector2i(1330, 123)
wrap_controls = true
transient = true
borderless = true

[node name="Control" type="Control" parent="WindowFactorWindow"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="WindowFactorWindow/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WindowFactorContainer" type="HBoxContainer" parent="WindowFactorWindow/Control"]
layout_mode = 0
offset_right = 211.0
offset_bottom = 23.0

[node name="MarginContainer" type="MarginContainer" parent="WindowFactorWindow/Control/WindowFactorContainer"]
layout_mode = 2

[node name="WindowFactorScale" type="HSlider" parent="WindowFactorWindow/Control/WindowFactorContainer/MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
min_value = 0.5
max_value = 5.0
step = 0.01
value = 1.0

[node name="WindowFactorLabel" type="Label" parent="WindowFactorWindow/Control/WindowFactorContainer"]
layout_mode = 2

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="size_changed" from="." to="." method="_on_size_changed"]
